Reworked with pm theme

--- a/docs/tickets/1.md
+++ b/docs/tickets/1.md
@@ -1,3 +1,10 @@
+---
+title: "Phase 1 — Agent Observability"
+status: done
+priority: high
+tags: [chat-app]
+---
+
 # Phase 1 — Agent Observability (Foundation)
 
 **Priority:** Highest — everything else builds on this
