--- a/docs/tickets/10.md
+++ b/docs/tickets/10.md
@@ -1,3 +1,10 @@
+---
+title: "Phase 5 — Deferred Research"
+status: backlog
+priority: low
+tags: [chat-app, research]
+---
+
 # Phase 5 — Deferred / Research
 
 No implementation commitment. Tracked for future consideration.
