--- a/docs/tickets/11.md
+++ b/docs/tickets/11.md
@@ -1,3 +1,10 @@
+---
+title: "MCP Support"
+status: backlog
+priority: high
+tags: [tool]
+---
+
 # MCP (Model Context Protocol) Support
 
 **Priority:** High
