--- a/docs/tickets/14.md
+++ b/docs/tickets/14.md
@@ -1,3 +1,10 @@
+---
+title: "Heartbeat Enhancements"
+status: backlog
+priority: high
+tags: [enhancement]
+---
+
 # Heartbeat Enhancements
 
 **Priority:** High
