--- a/docs/tickets/16.md
+++ b/docs/tickets/16.md
@@ -1,3 +1,10 @@
+---
+title: "Tautulli + Plex Skill"
+status: backlog
+priority: medium
+tags: [skill]
+---
+
 # Tautulli + Plex Skill
 
 **Priority:** Medium
@@ -102,52 +109,6 @@ metadata:
 ---
 ```
 
-```markdown
-# Tautulli + Plex Management
-
-You can access Plex analytics through Tautulli and control the Plex server directly.
-
-## Connection Details
-
-- **Tautulli:** http://100.114.249.118:8181/api/v2?apikey={API_KEY}&cmd={command}
-- **Plex:** http://100.114.249.118:32400/{endpoint}?X-Plex-Token={TOKEN}
-
-(Update host/port/keys as needed. Store API keys in memory after first configuration.)
-
-## Tautulli Commands
-
-Use `web_fetch` or `exec` with `curl` to call Tautulli:
-
-```bash
-# Current activity
-curl -s "http://HOST:8181/api/v2?apikey=KEY&cmd=get_activity"
-
-# Home stats (top watched)
-curl -s "http://HOST:8181/api/v2?apikey=KEY&cmd=get_home_stats&time_range=30"
-
-# Play history
-curl -s "http://HOST:8181/api/v2?apikey=KEY&cmd=get_history&length=25"
-
-# Library stats
-curl -s "http://HOST:8181/api/v2?apikey=KEY&cmd=get_libraries"
-
-# Recently added
-curl -s "http://HOST:8181/api/v2?apikey=KEY&cmd=get_recently_added&count=10"
-```
-
-## Plex Commands
-
-```bash
-# List libraries
-curl -s "http://HOST:32400/library/sections?X-Plex-Token=TOKEN" -H "Accept: application/json"
-
-# Home screen hubs
-curl -s "http://HOST:32400/hubs?X-Plex-Token=TOKEN" -H "Accept: application/json"
-
-# Collections in a library
-curl -s "http://HOST:32400/library/sections/{id}/collections?X-Plex-Token=TOKEN" -H "Accept: application/json"
-```
-
 ## Common Tasks
 
 ### Weekly Viewing Report
@@ -171,7 +132,6 @@ curl -s "http://HOST:32400/library/sections/{id}/collections?X-Plex-Token=TOKEN"
 - Confirm before modifying home screen, terminating streams, or changing collections
 - When reporting stats, be concise - highlight interesting patterns, don't dump raw data
 - Store API keys in memory/MEMORY.md after first setup (not in the skill file)
-```
 
 ## Open Questions
 
