--- a/docs/tickets/17.md
+++ b/docs/tickets/17.md
@@ -1,3 +1,10 @@
+---
+title: "Kometa Skill"
+status: backlog
+priority: medium
+tags: [skill]
+---
+
 # Kometa Skill
 
 **Priority:** Medium
@@ -133,80 +140,6 @@ metadata:
 ---
 ```
 
-```markdown
-# Kometa Collection Management
-
-You can author and manage Kometa YAML configuration files for Plex collections.
-
-## Kometa Config Location
-
-Kometa configs are stored at: /mnt/user/appdata/kometa/config/ (update if different)
-
-Key files:
-- `config.yml` - Main Kometa config
-- `collections/` or individual library YAML files - Collection definitions
-
-Use `read_file` and `write_file` to manage these configs.
-
-## Writing Collections
-
-### YAML Format
-
-```yaml
-collections:
-  Collection Name:
-    # One or more builders (sources)
-    builder_type: builder_value
-    # Optional metadata
-    summary: "Description"
-    sort_title: "!010_Collection Name"  # ! prefix for sort order
-    collection_order: custom            # or release, alpha, etc.
-    sync_mode: sync                     # sync (match exactly) or append
-```
-
-### Common Builders
-
-**By person (TMDb ID required):**
-```yaml
-  Director Collection:
-    tmdb_person: 525          # Christopher Nolan
-```
-
-**By IMDb chart:**
-```yaml
-  Top 250:
-    imdb_chart: top_movies
-```
-
-**By smart filter (dynamic, no re-run needed):**
-```yaml
-  Recently Added 4K:
-    smart_filter:
-      all:
-        resolution: 4K
-      sort_by: added.desc
-      limit: 50
-```
-
-**By search:**
-```yaml
-  90s Action:
-    plex_search:
-      all:
-        genre: Action
-        decade: 1990
-```
-
-### Looking Up IDs
-
-When you need TMDb or IMDb IDs:
-1. Search TMDb: `web_fetch("https://api.themoviedb.org/3/search/movie?query=NAME&api_key=KEY")`
-2. Or use web_search: `web_search("christopher nolan tmdb person id")`
-3. IMDb IDs look like: tt1234567 (titles), nm1234567 (people)
-4. TMDb IDs are plain numbers
-
-Store frequently used IDs in memory for reuse.
-
 ## Smart Filter Reference
 
 Smart filters create dynamic collections that auto-update without re-running Kometa.
@@ -228,7 +161,6 @@ Smart filters create dynamic collections that auto-update without re-running Kom
 - Prefer smart filters when possible (they auto-update)
 - Confirm collection changes with Pierce before writing
 - After writing configs, remind Pierce to run Kometa to apply changes
-```
 
 ## Open Questions
 
