--- a/docs/tickets/4.md
+++ b/docs/tickets/4.md
@@ -1,3 +1,10 @@
+---
+title: "Phase 3b — Inline Media"
+status: backlog
+priority: medium
+tags: [chat-app]
+---
+
 # Phase 3b — Inline Media
 
 **Scope:** Client UI
