--- a/docs/tickets/5.md
+++ b/docs/tickets/5.md
@@ -1,3 +1,10 @@
+---
+title: "Phase 3c — Chat Search"
+status: backlog
+priority: medium
+tags: [chat-app]
+---
+
 # Phase 3c — Chat Search
 
 **Scope:** Client UI
