--- a/docs/tickets/6.md
+++ b/docs/tickets/6.md
@@ -1,3 +1,10 @@
+---
+title: "Phase 4a — Workspace Inspector"
+status: backlog
+priority: medium
+tags: [chat-app]
+---
+
 # Phase 4a — Workspace Inspector & Markdown Editor
 
 **Scope:** New views + backend endpoints
