--- a/docs/tickets/7.md
+++ b/docs/tickets/7.md
@@ -1,3 +1,10 @@
+---
+title: "Phase 4b — Bot Profile"
+status: backlog
+priority: low
+tags: [chat-app]
+---
+
 # Phase 4b — Bot Profile View
 
 **Scope:** New view + backend endpoint
