--- a/docs/tickets/8.md
+++ b/docs/tickets/8.md
@@ -1,3 +1,10 @@
+---
+title: "Phase 4c — Notification Tuning"
+status: backlog
+priority: low
+tags: [chat-app]
+---
+
 # Phase 4c — Notification Tuning
 
 **Scope:** Client UI + backend endpoint
