--- a/docs/tickets/9.md
+++ b/docs/tickets/9.md
@@ -1,3 +1,10 @@
+---
+title: "Phase 4d — Voice Messages"
+status: backlog
+priority: low
+tags: [chat-app]
+---
+
 # Phase 4d — Voice Messages
 
 **Scope:** Client UI + on-device transcription
