--- a/docs/tickets/13.md
+++ b/docs/tickets/13.md
@@ -1,3 +1,10 @@
+---
+title: "Background Process Tool"
+status: backlog
+priority: low
+tags: [tool]
+---
+
 # Background Process Tool
 
 **Priority:** Low-Medium
