--- a/docs/tickets/2.md
+++ b/docs/tickets/2.md
@@ -1,3 +1,10 @@
+---
+title: "Phase 2 — Core Chat Polish"
+status: done
+priority: high
+tags: [chat-app]
+---
+
 # Phase 2 — Core Chat Polish
 
 **Status:** Done (web client)
