--- a/docs/tickets/3.md
+++ b/docs/tickets/3.md
@@ -1,3 +1,10 @@
+---
+title: "Phase 3a — Replies & Reactions"
+status: backlog
+priority: medium
+tags: [chat-app]
+---
+
 # Phase 3a — Replies & Reactions
 
 **Scope:** Protocol extensions + client UI
