Setup new ticket docs system

--- a/docs/tickets/3.md
+++ b/docs/tickets/3.md
@@ -22,3 +22,31 @@ tags: [chat-app]
 - Protocol: `{"type": "reaction", "message_id": "...", "emoji": "👍"}`.
 - Reactions persist across reconnects (requires backend storage).
 - The bot can react to user messages as a lightweight acknowledgment.
+
+## Prototype UI Details
+
+### Context Menu
+
+- **Trigger**: right-click (desktop) or 500ms long-press (mobile) on a message
+- **Floating menu**: emoji reaction bar with 6 quick-pick emojis (👍👎❤️😂🔥👀) + Reply and Copy actions
+
+### Reply Compose Bar
+
+- Appears above input field when replying
+- Shows: "Replying to [user/nanobot]: [preview text]" + dismiss (×) button
+- Typing a new message with the bar visible sends the reply
+
+### Reply Reference in Chat
+
+- Blue vertical bar + truncated quote (80 chars max) displayed above the reply bubble
+- Tapping the quote scrolls to the original message
+
+### Reaction Pills
+
+- Rendered below the message bubble
+- Bordered pill badges: emoji + count
+- Tapping an existing reaction toggles the user's reaction on/off
+
+### Reference
+
+Prototype lines 333–418, 503–536
