--- a/docs/tickets/6.md
+++ b/docs/tickets/6.md
@@ -1,11 +1,13 @@
 ---
 title: "Phase 4a — Workspace Inspector"
-status: backlog
+status: done
 priority: medium
 tags: [chat-app]
 ---
 
 # Phase 4a — Workspace Inspector & Markdown Editor
+
+> **Superseded by NB-21** — Enhanced Files Tab covers all original scope plus search, sort, filter, context menus, inline rename, and deep linking.
 
 **Scope:** New views + backend endpoints
 
