--- a/docs/tickets/7.md
+++ b/docs/tickets/7.md
@@ -1,11 +1,13 @@
 ---
 title: "Phase 4b — Bot Profile"
-status: backlog
+status: done
 priority: low
 tags: [chat-app]
 ---
 
 # Phase 4b — Bot Profile View
+
+> **Superseded by NB-26** — Enhanced Bot Profile covers all original scope plus dynamic bot-updatable status fields, 3D avatar integration, and bottom sheet presentation.
 
 **Scope:** New view + backend endpoint
 
