Migrate ticket board to GitHub Issues
- Added ROADMAP.md with milestone overview
- Updated CLAUDE.md to reference GitHub Issues as source of truth
- Added migration notice to all 37 docs/tickets/*.md files pointing to their GH issue
- Created 8 milestones and 8 labels on GitHub
- Created 37 issues (#1–#37) across all milestones; 6 done/superseded tickets closed

--- a/docs/tickets/NB-22.md
+++ b/docs/tickets/NB-22.md
@@ -1,3 +1,4 @@
+<!-- Migrated to GitHub Issues on 2026-02-17. See https://github.com/McBrideMusings/nanobot/issues/21 -->
 ---
 title: iOS — 3D Agent Avatar
 status: backlog
