--- a/docs/tickets/NB-12.md
+++ b/docs/tickets/NB-12.md
@@ -1,3 +1,4 @@
+<!-- Migrated to GitHub Issues on 2026-02-17. See https://github.com/McBrideMusings/nanobot/issues/34 -->
 ---
 title: Phase 2 — Core Chat Polish
 status: done
