--- a/docs/tickets/NB-13.md
+++ b/docs/tickets/NB-13.md
@@ -1,3 +1,4 @@
+<!-- Migrated to GitHub Issues on 2026-02-17. See https://github.com/McBrideMusings/nanobot/issues/7 -->
 ---
 title: File Links & @References in Chat
 status: backlog
