--- a/docs/tickets/NB-24.md
+++ b/docs/tickets/NB-24.md
@@ -1,3 +1,4 @@
+<!-- Migrated to GitHub Issues on 2026-02-17. See https://github.com/McBrideMusings/nanobot/issues/28 -->
 ---
 title: iOS — File Links & @References
 status: backlog
