--- a/docs/tickets/NB-28.md
+++ b/docs/tickets/NB-28.md
@@ -1,3 +1,4 @@
+<!-- Migrated to GitHub Issues on 2026-02-17. See https://github.com/McBrideMusings/nanobot/issues/18 -->
 ---
 title: iOS — Enhanced Logs & Split Pane
 status: backlog
