--- a/docs/tickets/NB-32.md
+++ b/docs/tickets/NB-32.md
@@ -1,3 +1,4 @@
+<!-- Migrated to GitHub Issues on 2026-02-17. See https://github.com/McBrideMusings/nanobot/issues/13 -->
 ---
 title: Phase 3b — Inline Media
 status: backlog
