--- a/docs/tickets/NB-34.md
+++ b/docs/tickets/NB-34.md
@@ -1,3 +1,4 @@
+<!-- Migrated to GitHub Issues on 2026-02-17. See https://github.com/McBrideMusings/nanobot/issues/35 -->
 ---
 title: Phase 4a — Workspace Inspector
 status: done
