--- a/docs/tickets/NB-36.md
+++ b/docs/tickets/NB-36.md
@@ -1,3 +1,4 @@
+<!-- Migrated to GitHub Issues on 2026-02-17. See https://github.com/McBrideMusings/nanobot/issues/26 -->
 ---
 title: Phase 4c — Notification Tuning
 status: backlog
