--- a/docs/tickets/NB-37.md
+++ b/docs/tickets/NB-37.md
@@ -1,3 +1,4 @@
+<!-- Migrated to GitHub Issues on 2026-02-17. See https://github.com/McBrideMusings/nanobot/issues/27 -->
 ---
 title: Phase 4d — Voice Messages
 status: backlog
